--- a/valinor/package.json
+++ b/valinor/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.0",
     "@tiptap/core": "^2.11.5",
