--- a/valinor/package.json
+++ b/valinor/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.5",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.475.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
+    "@types/date-fns": "^2.5.3",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
