--- a/valinor/backend/alembic.ini
+++ b/valinor/backend/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://admin:valinor@localhost:5432/valinor
+sqlalchemy.url = postgresql://postgres:valinor@localhost:5432/valinor
 
 
 [post_write_hooks]
