Remove .vscode from .gitignore and track it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "**/.trunk/*out/": true,
     "**/.trunk/*plugins/": true,
     "**/__pycache__": true
-  }
+  },
+  "C_Cpp_Runner.msvcBatchPath": ""
 }
